Página de inicio: Falta completar la funcionalidad de búsqueda y mejorar el look and feel. Sección de tags/chips con alimentos encontrados en cámara. Migración a AndroidX

--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-<!--tools:context=".ScrollingActivity"-->
+    <!--tools:context=".ScrollingActivity"-->
 
     <!--
     <ImageView
@@ -164,4 +165,4 @@
         android:clickable="true"
         android:focusable="true"
         app:srcCompat="@drawable/inicio" />
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
