--- a/app/src/main/res/layout/content_foods_found_camera.xml
+++ b/app/src/main/res/layout/content_foods_found_camera.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".StartActivity"
-    tools:showIn="@layout/activity_start">
+    tools:context=".FoodsFoundCameraActivity"
+    tools:showIn="@layout/activity_foods_found_camera">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
