--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -359,7 +359,7 @@
             android:visibility="invisible"
             android:textColor="@android:color/black" />
 
-        <android.support.v7.widget.SwitchCompat
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/api_info_switch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
