--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="GrayTextColor">
+        <item name="android:textColor">#707070</item>
+    </style>
 
     <style name="AppTheme.Picker" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
         <item name="android:textColorPrimary">@android:color/white</item>
@@ -35,7 +38,6 @@
         <item name="android:lineHeight">32px</item>
 
 
-
     </style>
 
     <style name="tomate">tomate
@@ -49,4 +51,4 @@
         </item>
 
     </style>
-    </resources>
+</resources>
