--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -348,6 +348,9 @@
         </LinearLayout>
 
         <ImageButton
+            android:id="@+id/cameraButtonView"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_gravity="center"
