--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -25,13 +25,10 @@
                 android:id="@+id/search_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:queryHint="Búsqueda" />
+                android:queryHint="Búsqueda">
+                <requestFocus />
+            </androidx.appcompat.widget.SearchView>
         </LinearLayout>
-
-        <ListView
-            android:id="@+id/list_view"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -49,18 +46,20 @@
                 android:textColor="#373640"
                 android:textSize="32sp" />
 
-            <Button
-                style="?android:attr/borderlessButtonStyle"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnGroupsMore"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:backgroundTint="@color/white"
-                android:drawableEnd="@drawable/chevron_right"
-                android:drawablePadding="10dp"
-                android:text="Ver más"
                 android:textAllCaps="false"
-                android:textColor="#707070" />
+                android:text="Ver más"
+                android:textColor="#707070"
+                app:iconTint="#707070"
+                app:iconTintMode="multiply"
+                app:icon="@drawable/chevron_right"
+                android:layoutDirection="rtl"/>
 
         </RelativeLayout>
 
@@ -78,6 +77,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/imgViewGroup1"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -85,6 +85,7 @@
                     app:srcCompat="@drawable/entradas_icon" />
 
                 <TextView
+                    android:id="@+id/txtGroupName1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -94,6 +95,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/txtGroupCount1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -110,6 +112,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/imgViewGroup2"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -117,6 +120,7 @@
                     app:srcCompat="@drawable/entradas_icon" />
 
                 <TextView
+                    android:id="@+id/txtGroupName2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -126,6 +130,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/txtGroupCount2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -142,6 +147,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/imgViewGroup3"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -149,6 +155,7 @@
                     app:srcCompat="@drawable/entradas_icon" />
 
                 <TextView
+                    android:id="@+id/txtGroupName3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -158,6 +165,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/txtGroupCount3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -186,18 +194,20 @@
                 android:textColor="#373640"
                 android:textSize="32sp" />
 
-            <Button
-                style="?android:attr/borderlessButtonStyle"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnRecipesMore"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:backgroundTint="@color/white"
-                android:drawableEnd="@drawable/chevron_right"
-                android:drawablePadding="10dp"
-                android:text="Ver más"
                 android:textAllCaps="false"
-                android:textColor="#707070" />
+                android:text="Ver más"
+                android:textColor="#707070"
+                app:iconTint="#707070"
+                app:iconTintMode="multiply"
+                app:icon="@drawable/chevron_right"
+                android:layoutDirection="rtl"/>
 
         </RelativeLayout>
 
@@ -219,6 +229,7 @@
                 android:paddingRight="15dp">
 
                 <ImageView
+                    android:id="@+id/imgViewRecipe1"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -226,6 +237,7 @@
                     app:srcCompat="@drawable/entradas_icon" />
 
                 <TextView
+                    android:id="@+id/txtRecipeName1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -234,6 +246,7 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:id="@+id/txtRecipeLength1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -245,6 +258,7 @@
                     android:textSize="10sp" />
 
                 <TextView
+                    android:id="@+id/txtRecipeCalories1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -264,6 +278,7 @@
                 android:paddingRight="15dp">
 
                 <ImageView
+                    android:id="@+id/imgViewRecipe2"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -271,6 +286,7 @@
                     app:srcCompat="@drawable/entradas_icon" />
 
                 <TextView
+                    android:id="@+id/txtRecipeName2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -279,6 +295,7 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:id="@+id/txtRecipeLength2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -290,6 +307,7 @@
                     android:textSize="10sp" />
 
                 <TextView
+                    android:id="@+id/txtRecipeCalories2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -309,6 +327,7 @@
                 android:paddingRight="15dp">
 
                 <ImageView
+                    android:id="@+id/imgViewRecipe3"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -316,6 +335,7 @@
                     app:srcCompat="@drawable/entradas_icon" />
 
                 <TextView
+                    android:id="@+id/txtRecipeName3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -324,6 +344,7 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:id="@+id/txtRecipeLength3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -335,6 +356,7 @@
                     android:textSize="10sp" />
 
                 <TextView
+                    android:id="@+id/txtRecipeCalories3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -344,16 +366,7 @@
                     android:textSize="10sp" />
 
             </LinearLayout>
-
         </LinearLayout>
-
-        <!--<ImageButton-->
-            <!--android:layout_width="56dp"-->
-            <!--android:layout_height="56dp"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:layout_marginTop="20dp"-->
-            <!--android:background="@drawable/buttonshape"-->
-            <!--android:src="@drawable/camera_icon" />-->
 
     </LinearLayout>
 
