--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -25,7 +25,8 @@
                 android:id="@+id/search_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:queryHint="Búsqueda">
+                android:queryHint="Búsqueda"
+                app:queryBackground="@android:color/transparent">
                 <requestFocus />
             </androidx.appcompat.widget.SearchView>
         </LinearLayout>
