--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -1,22 +1,146 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout1"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageViewSelection"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="1000dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/seleccionbocaditosdecoliflor"/>
+            android:layout_height="match_parent">
 
-    </RelativeLayout>
+            <ToggleButton
+                android:id="@+id/btnfavorite"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="10dp"
+                android:background="@drawable/toggle_favorite_black_border"
+                android:checked="false"
+                android:text=""
+                android:textOff=""
+                android:textOn="" />
 
-</ScrollView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imgRecipe"
+                    android:layout_width="wrap_content"
+                    android:layout_height="225dp"
+                    android:layout_gravity="center"
+                    android:paddingTop="25dp"
+                    android:paddingBottom="10dp"
+                    app:srcCompat="@drawable/food_icon" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#4D000000" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
+
+                    <TextView
+                        android:id="@+id/txtTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="15dp"
+                        android:text="Zucchinis rellenos"
+                        android:textColor="#373640"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="10dp"
+                        android:text="Ligera, económica y rápida. Así es esta receta a base de zapallito italiano, un vegetal que lo vemos por montones en el mercado, pero que muchas veces no sabemos cómo prepararlo." />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtRecipeLength"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="20dp"
+                            android:drawableLeft="@drawable/schedule_icon"
+                            android:text=" 60 min"
+                            android:textColor="#707070"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/txtRecipeCalories"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableLeft="@drawable/calorias_icon"
+                            android:text=" 457 calorías"
+                            android:textColor="#707070"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="INFORMACIÓN NUTRICIONAL"
+                        android:textColor="#4CAF50"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Ingredientes"
+                        android:textColor="#373640"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/txtIngredients"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="- 4 zucchinis grandes\n- 3 cucharadas de sopa de aceite \n- 1 cebolla grande\n- 3 rodajas de panceta ahumada\n- 1 diente de ajo\n- 250 Gramos de carne picada de cerdo y \nternera\n- 1 taza de arroz cocido\n- 1 cubo de caldo de carne \n- or\u00C3\u00A9gano y pimienta al gusto\n- 1 taza de queso rallado grueso"
+                        android:textColor="#707070"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Elaboración"
+                        android:textColor="#373640"
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/txtElaboration"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:text="Cortar los zucchinis por la mitad y ahuecar quitando la pulpa. Saltear la cebolla y el diente de ajo picados en el aceite hasta que est\u00C3\u00A9n transparentes. A\u00C3\u00B1adir la carne picada y rehogar 5 minutos.\n\nAgregar la panceta picada y dorada aparte, la pulpa de los zucchinis cortada en cubitos, el cubito de caldo de carne, mezclar y dorar todo junto hasta que este cocido, aproximadamente 7 minutos. Agregar el arroz.\n\nCondimentar a gusto con or\u00C3\u00A9gano y pimienta.\n\nRellenar los zucchinis con la preparaci\u00C3\u00B3n, \nespolvorearlos con el queso y colocarlos en una fuente de horno enmantecada. Colocar en la fuente \u00C2\u00BD taza de caldo de carne y cocinar a fuego moderado hasta que los zucchinis est\u00C3\u00A9n tiernos."
+                        android:textColor="#707070"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </ScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
