--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -8,9 +8,11 @@
     android:background="@drawable/bottom_sheet_bg"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="8dp"
+    android:padding="20dp"
     app:behavior_hideable="false"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+
 
     <LinearLayout
         android:id="@+id/gesture_layout"
@@ -35,31 +37,13 @@
             android:textSize="24dp"
             android:lineHeight="32dp"
             android:fontFamily="Roboto"
+            android:textColor="#373640"
             />
-
-        <View
-            android:id="@+id/rectangle_3"
-            android:layout_width="90dp"
-            android:layout_height="32dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/rectangle_3"
-            />
-        <TextView
-            android:id="@+id/tomate"
-            android:layout_width="48dp"
-            android:layout_height="19dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="12dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="7dp"
-            android:text="@string/tomate"
-            android:textAppearance="@style/tomate"
-            android:lineSpacingExtra="3sp"
-            android:gravity="center_vertical"
-            />
-
-
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/foodChipGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"></com.google.android.material.chip.ChipGroup>
 
         <Button
             android:id="@+id/button"
