--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -111,8 +111,9 @@
                         android:textColor="#373640"
                         android:textSize="24sp" />
 
+
                     <TextView
-                        android:id="@+id/txtIngredients"
+                        android:id="@+id/txtIngredient"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
