--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -97,6 +97,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/txtNutricionalInfo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
