--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -12,7 +12,52 @@
     app:behavior_hideable="false"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/alimentos_e"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="15.5dp"
+                android:text="@string/alimentos_e"
+                android:lineSpacingExtra="4sp"
+                android:translationY="-1.94sp"
+                android:gravity="top"
+                android:textSize="24sp"
+                android:fontFamily="Roboto"
+                android:textColor="#373640"/>
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/foodChipGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp">
+            </com.google.android.material.chip.ChipGroup>
+
+        </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/ButtonFindRecipes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="5dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:backgroundTint="#2BE232"
+            app:srcCompat="@drawable/chef_hat"/>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/gesture_layout"
@@ -21,44 +66,6 @@
         android:orientation="vertical"
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
-
-        <TextView
-            android:id="@+id/alimentos_e"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="16dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="15.5dp"
-            android:text="@string/alimentos_e"
-            android:lineSpacingExtra="4sp"
-            android:translationY="-1.94sp"
-            android:gravity="top"
-            android:textSize="24dp"
-            android:lineHeight="32dp"
-            android:fontFamily="Roboto"
-            android:textColor="#373640"
-            />
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/foodChipGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"></com.google.android.material.chip.ChipGroup>
-
-        <Button
-            android:id="@+id/ButtonFindRecipes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:fontFamily="sans-serif-medium"
-            android:textStyle="normal"
-            android:textColor="@color/white"
-            android:layout_gravity="right"
-            android:letterSpacing="0.09"
-            android:lineSpacingExtra="5sp"
-            android:backgroundTint="@color/darkish_green"
-            android:text="@string/buscar_recetas" />
-
 
         <ImageView
             android:id="@+id/bottom_sheet_arrow"
