--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -32,11 +32,11 @@
 
                 <ImageView
                     android:id="@+id/imgRecipe"
-                    android:layout_width="wrap_content"
+                    android:layout_width="225dp"
                     android:layout_height="225dp"
                     android:layout_gravity="center"
-                    android:paddingTop="25dp"
-                    android:paddingBottom="10dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="10dp"
                     app:srcCompat="@drawable/food_icon" />
 
                 <View
